// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin/wechat-mp/account index 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "/admin-api/wechat-mp/account",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;

exports[`admin/wechat-mp/account index 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "/admin-api/wechat-mp/account",
      },
    ],
    Array [
      Object {
        "data": Object {
          "applicationId": "appId2",
          "applicationSecret": "appSecret2",
        },
        "loading": true,
        "method": "patch",
        "url": "/admin-api/wechat-mp/account",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;
